Migrate stats to tool modules
Now everything from tool defintions is in modules!
Added tool stats hook, used for set setting and stat multiplying
Ditched the material stat building hook, material stats now use the tool stats hook. To accomdiate this, materilal stat builders now
Float stat updating now ditches the base value, making it semantically different from stat adding