@@ -1,24 +1,24 @@
-package slimeknights.tconstruct.tools;
+package slimeknights.tconstruct.tools.stats;
 
-import com.google.common.collect.ImmutableList;
 import net.minecraft.world.item.Tiers;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import slimeknights.tconstruct.fixture.MaterialItemFixture;
 import slimeknights.tconstruct.fixture.MaterialStatsFixture;
 import slimeknights.tconstruct.fixture.ToolDefinitionFixture;
 import slimeknights.tconstruct.library.materials.MaterialRegistryExtension;
 import slimeknights.tconstruct.library.materials.definition.IMaterial;
-import slimeknights.tconstruct.library.tools.definition.ToolDefinitionData;
-import slimeknights.tconstruct.library.tools.definition.ToolDefinitionDataBuilder;
+import slimeknights.tconstruct.library.tools.definition.module.material.ToolMaterialHook;
 import slimeknights.tconstruct.library.tools.nbt.MaterialNBT;
+import slimeknights.tconstruct.library.tools.nbt.StatsNBT;
+import slimeknights.tconstruct.library.tools.stat.ModifierStatsBuilder;
 import slimeknights.tconstruct.library.tools.stat.ToolStats;
 import slimeknights.tconstruct.library.tools.stat.ToolStatsBuilder;
 import slimeknights.tconstruct.test.BaseMcTest;
-import slimeknights.tconstruct.tools.stats.ExtraMaterialStats;
-import slimeknights.tconstruct.tools.stats.HandleMaterialStats;
-import slimeknights.tconstruct.tools.stats.HeadMaterialStats;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static slimeknights.tconstruct.fixture.MaterialFixture.MATERIAL_WITH_ALL_STATS;
@@ -28,6 +28,10 @@ import static slimeknights.tconstruct.fixture.MaterialFixture.MATERIAL_WITH_HEAD
 
 @ExtendWith(MaterialRegistryExtension.class)
 class StatsBuilderTest extends BaseMcTest {
+  @BeforeAll
+  static void beforeAll() {
+    MaterialItemFixture.init();
+  }
 
   /**
    * Gets a builder for the given materials list, validating the size is correct
@@ -35,7 +39,7 @@ class StatsBuilderTest extends BaseMcTest {
    * @return  Melee harvest tool stats builder
    */
   static MeleeHarvestToolStatsBuilder getBuilder(IMaterial... materials) {
-    ToolStatsBuilder builder = MeleeHarvestToolStatsBuilder.from(ToolDefinitionFixture.getStandardToolDefinition(), MaterialNBT.of(materials));
+    ToolStatsBuilder builder = MeleeHarvestToolStatsBuilder.from(ToolMaterialHook.stats(ToolDefinitionFixture.getStandardToolDefinition()), MaterialNBT.of(materials));
     assertThat(builder).overridingErrorMessage("Given materials list is the wrong size").isInstanceOf(MeleeHarvestToolStatsBuilder.class);
     return (MeleeHarvestToolStatsBuilder) builder;
   }
@@ -96,14 +100,15 @@ class StatsBuilderTest extends BaseMcTest {
 
   @Test
   void calculateValues_noStats() {
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildDurability()).isEqualTo(1);
-    assertThat(builder.buildHarvestLevel()).isEqualTo(Tiers.WOOD);
-    assertThat(builder.buildMiningSpeed()).isGreaterThan(0);
-    assertThat(builder.buildMiningSpeed()).isLessThanOrEqualTo(1);
-    assertThat(builder.buildAttackDamage()).isEqualTo(0);
-    assertThat(builder.buildAttackSpeed()).isEqualTo(1);
+    StatsNBT stats = builder.build();
+    assertThat(stats.getInt(ToolStats.DURABILITY)).isEqualTo(1);
+    assertThat(stats.get(ToolStats.HARVEST_TIER)).isEqualTo(Tiers.WOOD);
+    assertThat(stats.get(ToolStats.MINING_SPEED)).isGreaterThan(0).isLessThanOrEqualTo(1);
+    assertThat(stats.get(ToolStats.ATTACK_DAMAGE)).isEqualTo(0);
+    assertThat(stats.get(ToolStats.ATTACK_SPEED)).isEqualTo(1);
   }
 
   @Test
@@ -111,9 +116,10 @@ class StatsBuilderTest extends BaseMcTest {
     HeadMaterialStats stats1 = new HeadMaterialStats(100, 0, Tiers.WOOD, 0);
     HeadMaterialStats stats2 = new HeadMaterialStats(50, 0, Tiers.WOOD, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionDataBuilder.builder().stat(ToolStats.DURABILITY, 100).build(), ImmutableList.of(stats1, stats2), Collections.emptyList(), Collections.emptyList());
-
-    assertThat(builder.buildDurability()).isEqualTo(175);
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    ToolStats.DURABILITY.update(builder, 100f);
+    new MeleeHarvestToolStatsBuilder(List.of(stats1, stats2), Collections.emptyList(), Collections.emptyList()).addStats(builder);
+    assertThat(builder.build().get(ToolStats.DURABILITY)).isEqualTo(175); // 100 + average of 100 and 75
   }
 
   @Test
@@ -121,20 +127,22 @@ class StatsBuilderTest extends BaseMcTest {
     HeadMaterialStats statsHead = new HeadMaterialStats(200, 0, Tiers.WOOD, 0);
     HandleMaterialStats statsHandle = new HandleMaterialStats(0.5f, 0, 0, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, ImmutableList.of(statsHead), ImmutableList.of(statsHandle), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(List.of(statsHead), List.of(statsHandle), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildDurability()).isEqualTo(100);
+    assertThat(builder.build().getInt(ToolStats.DURABILITY)).isEqualTo(100); // 100 * 0.5
   }
 
   @Test
   void buildMiningSpeed_testHandleMiningSpeed() {
     HeadMaterialStats statsHead = new HeadMaterialStats(0, 2.0f, Tiers.WOOD, 0);
-    HandleMaterialStats statsHandle = new HandleMaterialStats(0, 0.5f, 0, 0);
+    HandleMaterialStats statsHandle = new HandleMaterialStats(0, 5f, 0, 0);
     ExtraMaterialStats statsExtra = ExtraMaterialStats.DEFAULT;
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, ImmutableList.of(statsHead), ImmutableList.of(statsHandle), ImmutableList.of(statsExtra));
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(List.of(statsHead), List.of(statsHandle), List.of(statsExtra)).addStats(builder);
 
-    assertThat(builder.buildMiningSpeed()).isEqualTo(1.0f);
+    assertThat(builder.build().get(ToolStats.MINING_SPEED)).isEqualTo(10f); // 2 * 5
   }
 
   @Test
@@ -143,20 +151,22 @@ class StatsBuilderTest extends BaseMcTest {
     HandleMaterialStats statsHandle1 = new HandleMaterialStats(0.3f, 0, 0, 0);
     HandleMaterialStats statsHandle2 = new HandleMaterialStats(0.7f, 0, 0, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, ImmutableList.of(statsHead), ImmutableList.of(statsHandle1, statsHandle2), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(List.of(statsHead), List.of(statsHandle1, statsHandle2), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildDurability()).isEqualTo(100);
+    assertThat(builder.build().getInt(ToolStats.DURABILITY)).isEqualTo(100); // 200 * (0.3 + 0.7)/2
   }
 
   @Test
   void buildMiningSpeed_testHandleMiningSpeed_average() {
-    HeadMaterialStats statsHead = new HeadMaterialStats(0, 2.0f, Tiers.WOOD, 0);
+    HeadMaterialStats statsHead = new HeadMaterialStats(0, 5.0f, Tiers.WOOD, 0);
     HandleMaterialStats statsHandle1 = new HandleMaterialStats(0, 0.3f, 0, 0);
     HandleMaterialStats statsHandle2 = new HandleMaterialStats(0, 0.7f, 0, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, ImmutableList.of(statsHead), ImmutableList.of(statsHandle1, statsHandle2), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(List.of(statsHead), List.of(statsHandle1, statsHandle2), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildMiningSpeed()).isEqualTo(1.0f);
+    assertThat(builder.build().get(ToolStats.MINING_SPEED)).isEqualTo(2.5f); // 5 * (0.3 + 0.7)/2
   }
 
   @Test
@@ -164,9 +174,11 @@ class StatsBuilderTest extends BaseMcTest {
     HeadMaterialStats stats1 = new HeadMaterialStats(1, 10, Tiers.WOOD, 0);
     HeadMaterialStats stats2 = new HeadMaterialStats(1, 5, Tiers.WOOD, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionDataBuilder.builder().stat(ToolStats.MINING_SPEED, 10).build(), ImmutableList.of(stats1, stats2), Collections.emptyList(), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    ToolStats.MINING_SPEED.update(builder, 10f);
+    new MeleeHarvestToolStatsBuilder(List.of(stats1, stats2), Collections.emptyList(), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildMiningSpeed()).isEqualTo(17.5f);
+    assertThat(builder.build().get(ToolStats.MINING_SPEED)).isEqualTo(17.5f); // 10+(10+5)/2
   }
 
   @Test
@@ -174,9 +186,11 @@ class StatsBuilderTest extends BaseMcTest {
     HeadMaterialStats stats1 = new HeadMaterialStats(1, 0, Tiers.WOOD, 5);
     HeadMaterialStats stats2 = new HeadMaterialStats(1, 0, Tiers.WOOD, 10);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionDataBuilder.builder().stat(ToolStats.ATTACK_DAMAGE, 10).build(), ImmutableList.of(stats1, stats2), Collections.emptyList(), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    ToolStats.ATTACK_DAMAGE.update(builder, 10f);
+    new MeleeHarvestToolStatsBuilder(List.of(stats1, stats2), Collections.emptyList(), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildAttackDamage()).isEqualTo(17.5f);
+    assertThat(builder.build().get(ToolStats.ATTACK_DAMAGE)).isEqualTo(17.5f); // 10+(10+5)/2
   }
 
   @Test
@@ -186,24 +200,29 @@ class StatsBuilderTest extends BaseMcTest {
     HeadMaterialStats stats3 = new HeadMaterialStats(1, 1, Tiers.DIAMOND, 0);
     HeadMaterialStats stats4 = new HeadMaterialStats(1, 1, Tiers.WOOD, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, ImmutableList.of(stats1, stats2, stats3, stats4), Collections.emptyList(), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(List.of(stats1, stats2, stats3, stats4), Collections.emptyList(), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildHarvestLevel()).isEqualTo(Tiers.DIAMOND);
+    assertThat(builder.build().get(ToolStats.HARVEST_TIER)).isEqualTo(Tiers.DIAMOND);
   }
 
   @Test
   void buildAttackSpeed_set() {
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionDataBuilder.builder().stat(ToolStats.ATTACK_SPEED, 1.5f).build(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
-    assertThat(builder.buildAttackSpeed()).isEqualTo(1.5f);
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    ToolStats.ATTACK_SPEED.update(builder, 1.5f);
+    new MeleeHarvestToolStatsBuilder(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()).addStats(builder);
+    assertThat(builder.build().get(ToolStats.ATTACK_SPEED)).isEqualTo(1.5f);
   }
 
   @Test
   void buildAttackSpeed_testHandleAttackDamage() {
     HeadMaterialStats head = new HeadMaterialStats(0, 0, Tiers.WOOD, 2);
     HandleMaterialStats stats = new HandleMaterialStats(0, 0, 0, 0.5f);
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, ImmutableList.of(head), ImmutableList.of(stats), Collections.emptyList());
 
-    assertThat(builder.buildAttackDamage()).isEqualTo(1.0f);
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(List.of(head), List.of(stats), Collections.emptyList()).addStats(builder);
+
+    assertThat(builder.build().get(ToolStats.ATTACK_DAMAGE)).isEqualTo(1.0f); // 2 * 0.5
   }
 
   @Test
@@ -212,17 +231,21 @@ class StatsBuilderTest extends BaseMcTest {
     HandleMaterialStats stats1 = new HandleMaterialStats(0, 0, 0, 1.3f);
     HandleMaterialStats stats2 = new HandleMaterialStats(0, 0, 0, 1.7f);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionDataBuilder.builder().stat(ToolStats.ATTACK_DAMAGE, 2).build(), ImmutableList.of(head), ImmutableList.of(stats1, stats2), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    ToolStats.ATTACK_DAMAGE.update(builder, 2f);
+    new MeleeHarvestToolStatsBuilder(List.of(head), List.of(stats1, stats2), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildAttackDamage()).isEqualTo(9);
+    assertThat(builder.build().get(ToolStats.ATTACK_DAMAGE)).isEqualTo(9); // (4+2) * (1.3+1.7)/2
   }
 
   @Test
   void buildAttackSpeed_testHandleAttackSpeed() {
     HandleMaterialStats stats = new HandleMaterialStats(0, 0, 1.5f, 0);
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, Collections.emptyList(), ImmutableList.of(stats), Collections.emptyList());
 
-    assertThat(builder.buildAttackSpeed()).isEqualTo(1.5f);
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(Collections.emptyList(), List.of(stats), Collections.emptyList()).addStats(builder);
+
+    assertThat(builder.build().get(ToolStats.ATTACK_SPEED)).isEqualTo(1.5f); // 1 * 1.5f
   }
 
   @Test
@@ -230,8 +253,9 @@ class StatsBuilderTest extends BaseMcTest {
     HandleMaterialStats stats1 = new HandleMaterialStats(0, 0, 1.3f, 0);
     HandleMaterialStats stats2 = new HandleMaterialStats(0, 0, 1.7f, 0);
 
-    MeleeHarvestToolStatsBuilder builder = new MeleeHarvestToolStatsBuilder(ToolDefinitionData.EMPTY, Collections.emptyList(), ImmutableList.of(stats1, stats2), Collections.emptyList());
+    ModifierStatsBuilder builder = ModifierStatsBuilder.builder();
+    new MeleeHarvestToolStatsBuilder(Collections.emptyList(), List.of(stats1, stats2), Collections.emptyList()).addStats(builder);
 
-    assertThat(builder.buildAttackSpeed()).isEqualTo(1.5f);
+    assertThat(builder.build().get(ToolStats.ATTACK_SPEED)).isEqualTo(1.5f); // 1 * (1.3+1.7)/2
   }
 }
